ui/style.css
* {
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
  padding: 0;
  margin: 0;
  background: #fbfbfb;
  height: 100%;
  overflow-y: hidden;
}

a,
a:visited,
a:focus,
a:hover {
  color: blue;
}

.loading {
  text-align: center;
  margin: 100px auto;
}

.app--desktop,
.app--server {
  border-top: 1px solid #ccc;
}

.app--desktop main,
.app--server main {
  display: flex;
}

header {
  box-shadow: 0 1px 3px 0 #aaa;
  position: fixed;
  top: 0;
  width: 100%;
  background: white;
  /* React Ace Editor has z-index of at least 4 or 6 */
  z-index: 10;
}

header a {
  text-decoration: none;
}

header .button,
header a {
  margin-left: 15px;
  display: inline-block;
}

[contenteditable='true'] {
  border-bottom: 1px dashed #4eb5ff;
}

[contenteditable='true']:focus {
  outline: none;
  border-bottom-style: solid;
  font-style: italic;
}

/*
NOT SURE IF THIS IS STILL NEEDED
.editor-container {
  resize: vertical;
  overflow: auto;
  flex: 1;
}
*/

.editor {
  width: 100%;
  min-height: 350px;
  height: 100% !important;
  border: 0;
  font-family: monospace;
  font-size: 1.1rem;
  counter-reset: line;
}

.textarea {
  padding: 5px;
  background: transparent;
  border: 1px solid #aaa;
  min-height: 100px;
  width: 800px;
  max-width: 100%;
}

label {
  padding-right: 15px;
  color: #777;
  font-size: 0.75rem;
}

.editor-container .input,
input.input,
label.input input,
select.select,
label.select select {
  padding: 5px;
  background: transparent;
  border: 0;
  border-bottom: 1px solid #aaa;
  /* Since many inputs are within label, keep the label font size small and the input font size normal */
  font-size: initial;
  display: inline-block;
  margin-left: 10px;
}

input.input[type='file'],
label.input input[type='file'] {
  border-bottom: 0;
}

.vertical-align-center {
  display: flex;
  align-items: center;
}

.flex {
  max-height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: stretch;
  align-content: center;
}

.block {
  display: block;
}

.button {
  outline: 0;
  border: 1px solid #ccc;
  background: #fbfbfb;
  padding: 5px;
  cursor: pointer;
  cursor: hand;
  border-radius: 3px;
}

.button:not(.material-icons-outlined):not(.material-icons):not(.button--primary) {
  box-shadow: 0px 1px 0px 0px #ccc;
}

.button:hover {
  background: #f0f0f0;
}

.button--primary {
  border-color: #3a005f;
  background: #9f04ff;
  color: white;
}

.button--primary:not(.material-icons):not(.material-icons-outlined) {
  box-shadow: 0px 1px 0px 0px #3a005f;
}

.button--primary:hover {
  background: #56008c;
}

.button.material-icons,
.button.material-icons-outlined {
  border: 0;
  background: transparent;
  color: #555;
  padding: 0;
}

.button:not(.material-icons):not(.material-icons-outlined):disabled,
.button:not(.material-icons):not(.material-icons-outlined):disabled:hover {
  background: #ccc;
  color: #777;
  cursor: not-allowed;
  pointer-events: all !important;
}

.button.button--primary.material-icons,
.button.button--primary.material-icons-outlined {
  color: #9f04ff;
}

.button.material-icons:disabled,
.button.material-icons-outlined:disabled,
.button.material-icons:disabled:hover,
.button.material-icons-outlined:disabled:hover {
  cursor: not-allowed;
  pointer-events: all !important;
  color: #ccc;
}

.resize {
  resize: both;
  overflow: auto;
}

.resize--horizontal {
  resize: horizontal;
}

.resize--left {
  direction: rtl;
}

.resize--left * {
  direction: ltr;
}

.flex-right {
  margin-left: auto;
}

.section,
header > div {
  padding: 15px;
}

.title {
  text-transform: uppercase;
  font-size: 0.9rem;
  color: #777;
  padding-bottom: 15px;
  white-space: nowrap;
}

.pages--empty {
  display: block;
  text-align: center;
  margin: 100px auto;
}

.pages--empty .button--primary {
  margin-right: 10px;
  display: inline-block;
}

.pages .section-title {
  font-size: 1.5rem;
  padding-bottom: 15px;
}

.sidebar {
  border-right: 1px solid #ccc;
  background: white;
  flex: 0 0 275px;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.sidebar--collapsed {
  flex: auto;
}

.connectors {
  flex: 1;
}

.server,
.connector {
  margin-bottom: 15px;
}

.server-name,
.connector-name {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.main-body {
  width: 100%;
  overflow-y: auto;
}

.pages .section-title {
  display: flex;
  align-items: flex-end;
}

.pages .current-page {
  margin-right: 8px;
  margin-left: 8px;
  padding: 8px;
  border: 1px solid #9f04ff;
  border-bottom: 0;
}

.pages .current-page .page-name {
  font-size: 1rem;
  border-color: #9f04ff;
}

.pages .page-name.button {
  margin: 0 5px;
  border-left: 0;
  border-top: 0;
  border-right: 0;
}

.page-delete {
  margin-right: 15px;
  display: inline-block;
}

.panel {
  background: white;
  border: 1px solid #ccc;
  margin-bottom: 15px;
}

.panel:focus-within,
.panel:focus {
  border-color: #9f04ff;
}

.panel--loading {
  animation: pulse 2s infinite ease-out;
}

@keyframes pulse {
  0% {
    background: white;
  }

  50% {
    background: #fcf6ff;
  }
}

.panel--hidden {
  border-color: #ccc;
}

.panel--hidden .panel-head,
.panel--empty .panel-head {
  border-bottom: 0;
}

.panel-type,
.connector-type {
  color: #777;
  padding-right: 15px;
}

.panel-head {
  border-bottom: 1px solid #ccc;
  padding: 15px;
}

.panel-body-container {
  overflow: auto;
  resize: vertical;
}

.panel-controls .button {
  margin-left: 15px;
}

.panel-details {
  margin-top: 15px;
}

.panel-details label.select select,
.panel-details select.select,
.panel-details label.input input,
.panel-details input.input {
  max-width: 100%;
}

.panel-body {
  padding: 15px;
  position: relative;
  flex: 1;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  /* Without this resizing the window smaller doesn't work, a scrollbar appears */
  max-width: 100%;
  /* Same for height */
  max-height: 100%;
}

.panel-order {
  width: 30px;
  margin-right: 15px;
  margin-left: 5px;
}

.panel-out {
  background: #333;
  padding: 5px;
  color: white;
  width: 400px;
  overflow: auto;
  display: flex;
  flex-direction: column;
}

.panel--empty .panel-out {
  width: 100%;
  max-width: 100%;
}

.panel-out-header {
  border-bottom: 1px solid white;
}

.panel-out-header .button {
  border: 0;
  background: 0;
  color: white;
  padding: 5px 15px;
  box-shadow: 0 0 0 0 !important;
}

.panel-out-header .button.selected {
  border: 1px solid white;
  border-bottom: 0;
}

.panel-preview {
  overflow: auto;
  height: 100%;
}

.panel-preview-results {
  margin: 5px;
  font-size: 0.9rem;
}

.panel-out .button:disabled {
  background: transparent;
  color: white;
}

.panel--empty .panel-body {
  display: none;
}

.new-panel {
  text-align: center;
  margin-bottom: 15px;
}

.panel p {
  max-width: 800px;
}

.text-muted {
  font-size: 0.9rem;
  color: #333;
}

.alert {
  margin-top: 15px;
  padding: 15px;
}

.alert pre {
  white-space: pre-wrap;
}

.alert a {
  padding: 0 5px;
}

.alert > .material-icons {
  padding-right: 15px;
  color: #555;
}

.alert-warning {
  background: #fff4e7;
  border: 1px solid #ffc0c0;
}

.alert-error {
  background: #ffe7e7;
  border: 1px solid #ffc0c0;
}

.alert-info {
  background: #e7f7ff;
  border: 1px solid #c0f0ff;
}

.share {
  position: relative;
}

.share-details {
  display: none;
  position: absolute;
  top: 30px;
  right: 1px;
  background: white;
  border: 1px solid #ccc;
  padding: 15px;
  width: 400px;
  color: black;
}

.share-details a {
  color: blue;
  margin: 0;
}

.share:focus-within .share-details {
  display: block;
}

.share-details input {
  border: 1px solid;
  width: 100%;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.text-light {
  color: #777;
}

.text-success {
  color: #129412;
}

.text-failure {
  color: #a00505;
}

.form-row {
  padding: 5px 0;
}

.form-row > * {
  padding-right: 10px;
}

.version {
  text-align: center;
  font-size: 0.9rem;
  color: #aaa;
  margin-bottom: 30px;
}

canvas {
  max-height: 100%;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  background: rgba(0, 0, 0, 0.5);
}

.modal-body {
  background: white;
  border: 1px solid #ccc;
  padding: 15px;
}

.project-name {
  background: white;
  border: 1px solid #ccc;
  padding: 15px;
  margin: 15px auto;
  width: 500px;
}

.project-name .input,
.project-name .input input,
.project-name .button {
  width: 100%;
  padding: 15px;
}

.project-existing {
  border-top: 1px solid #ccc;
  padding-top: 15px;
  margin-top: 15px;
}

th {
  text-align: left;
}

tbody tr:nth-child(odd) {
  background: #f9f0ff;
}

.confirm {
  position: relative;
}

.confirm-popup {
  display: none;
  position: absolute;
  top: calc(100% + 5px);
  right: 0;
  z-index: 4;
  padding: 15px;
  min-width: 200px;
  background: white;
  box-shadow: 0 1px 3px 0 #aaa;
  border: 1px solid #ccc;
  font-size: 1rem;
}

.confirm-popup .button + .button {
  display: inline-block;
  margin-left: 15px;
}

.confirm-popup--open {
  display: block;
}

.confirm-popup--right {
  left: 0;
  right: unset;
}

